@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016 Chris K Wensel <chris@wensel.net>. All Rights Reserved.
+ * Copyright (c) 2016-2017 Chris K Wensel <chris@wensel.net>. All Rights Reserved.
  * Copyright (c) 2007-2017 Xplenty, Inc. All Rights Reserved.
  *
  * Project and contact information: http://www.cascading.org/
@@ -84,6 +84,9 @@ public class SourceStage extends ElementStage<Void, TupleEntry> implements Calla
 
       while( iterator.hasNext() )
         {
+        if( Thread.interrupted() )
+          throw new InterruptedException( "thread interrupted" );
+
         TupleEntry tupleEntry;
 
         try
@@ -112,6 +115,10 @@ public class SourceStage extends ElementStage<Void, TupleEntry> implements Calla
         }
 
       next.complete( this );
+      }
+    catch( InterruptedException exception )
+      {
+      // do nothing -- let finally run
       }
     catch( Throwable throwable )
       {
