@@ -2,6 +2,9 @@ Cascading Change Log
 
 4.0 [unreleased]
 
+  Fixed issue where the local mode runner would not gracefully shutdown threads and clean up resources on
+  c.f.Flow#stop() and JVM shutdown conditions.
+
   Updated c.t.p.DelimitedPartition to support arbitrary postfix values so that static filenames and paths can be
   applied.
 
